# TrebolsoftV1

./: .env.example  .gitignore  BACKUP_GUIDE.md  BACKUP_LOCATIONS_FINAL.md  BACKUP_STATUS_FINAL.md  CLOUDINARY_SETUP.md  COPILOT_CONTINUITY_GUIDE.md  DISASTER_RECOVERY.md  DUAL_SYNC_STATUS.md  Dockerfile  FRONTEND_PLAN.md  FRONTEND_SETUP_GUIDE.md  LICENSE  LOGIN_FIX_GUIDE.md  PROJECT_CONTEXT_FULL.md  README.md  alembic.ini  backup.sql  backup_center.py  backup_script.py  check_deploy.ps1  check_users.py  cloud_backup_setup.py  create_admin.py  create_migration_package.py  dev.db  docker-compose.yml  entrypoint.sh  env_copiado.txt  fix_boxes.py  google_drive_setup.py  main.py  migration_guide.md  monitoring_endpoint.py  nohup.out  package-lock.json  pyproject.toml  render_auto_backup.py  requirements.txt  reset_admin_db.py  (+9 more)
.github/: copilot-instructions.md
.github/workflows/: auto_backup.yml  staging-tests.yml
alembic/: env.py
app/: main.py
app/core/: __init__.py  (+5 more)
docs/: API_Caja.md  CONFIGURACION_PRODUCCION.md  MANUAL_ADMIN.md  MANUAL_COBRADOR.md  MANUAL_SUPERVISOR.md  render_secrets.md  render_setup_instructions.md  session_summary.md
frontend-templates/: README.md
manual_backup_to_drive/: INSTRUCCIONES_GOOGLE_DRIVE.txt
migration_package/: .env.example  MIGRATION_CHECKLIST.md  backup_center.py  backup_complete.py  backup_scheduler.py  quick_setup.bat  requirements.txt
restore_temp/: BACKUP_MANIFEST.json  git_info.json
scripts/: create_superuser_prod.py  create_supervisor.py  md_to_pdf.py  run_e2e_validation.ps1
tests/: test_auth_flow.py  test_smoke.py
(+75 files in other folders)
